--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family:  'Roboto', sans-serif;
+}
 .body {
     display: flex;
     
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     gap: 100px;
-    background-color: #1F2937;
+    background-image: url('./images/cheese.jpg');
+    background-size: cover;
+    background-position: center;
     height: 390px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    padding: 10px;
 }
 
 .main-body{
    
-    color: white;
+    color: rgb(28, 27, 27);
     width: 350px;
     
+    
+
 
 }
 ul, .description {
-    color: #E5e7eb;
+    color: black;
     font-size: 18px;
+    font-weight: bold;
+   
 }
 
 ul {
@@ -30,6 +43,7 @@ ul {
     padding: 0;
     justify-content: flex-end;
     gap: 30px;
+   
 
 }
 .lower-body {
@@ -38,17 +52,14 @@ ul {
     
     
 }
-.heading {
-    font-size: 48px;
-    font-weight: bolder;
-    
-}
-.heading, img{
-    margin-top: 70px;
-}
+
+
 .Header {
     font-size: 24px;
-    color:#f9faf8;
+    color:black;
+    font-weight: bolder;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
 }
 .button {
     background: royalblue;
@@ -57,4 +68,132 @@ ul {
   padding: 8px 16px;
   border-radius: 8px;
   margin-top: 10px;
+}
+li button {
+    
+   border-radius: 8px;
+   border: 1px;
+   padding: 8px 16px;
+   background: rgba(246, 220, 136, 0.3);
+   font-weight: bolder;
+   font-size: 20px;
+}
+
+/* Middle part code */
+
+.img-1,.img-2,.img-3,.img-4 {
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    margin-top: 20px;
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px;
+  border: rgb(118, 118, 2) solid;
+  background-size: cover;
+  }
+
+  .mp-header {
+    
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    margin-top: 30px;
+  }
+
+  .img-box {
+    display: flex;
+    
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .img-detail {
+    display: flex;
+    justify-content: center;
+    
+    flex-wrap: wrap;
+    
+  }
+  .middle-part {
+    height: 400px;
+    margin-top: 0;
+    padding: 0;
+    background-color: wheat;
+    border: wheat solid;
+  }
+  .img-1 {
+    background-image: url('./images/cheese3.jpeg');
+  }
+  .img-2 {background-image: url('./images/gouda.jpg');
+
+  }
+  .img-3 {background-image: url('./images/feta.jpg');}
+  .img-4 {background-image: url('./images/mozzarella.jpg');}
+
+
+  /* Quote part */
+.lower-part {
+    background-image: url('./images/cheese.jpg');
+    background-position: bottom;
+    display: flex;
+    height: 350px;
+    align-items: center;
+    justify-content: space-around;
+}
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: bolder;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 800px;
+    height: 200px;
+}
+
+.author {
+    display: flex;
+    
+    justify-content: flex-end;
+    font-size: 28px;
+    font-weight: bolder;
+}
+
+.end {
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: wheat;
+}
+.whole {
+    height: 100px;
+    width: 900px;
+    background: royalblue;
+    border: 1px solid royalblue;
+    padding: 8px 16px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+}
+.buttons {
+    border: 3px solid white;
+    padding: 8px 16px;
+  border-radius: 8px;
+  background-color: royalblue;
+  color: white;
+  font-size: medium;
+  width: 150px;
+}
+.Call {
+font-size: 28px;
+color: white;
+}
+.point {
+    font-size: 18px;
+    color: white;
 }
