--- a/style.css
+++ b/style.css
@@ -1,199 +1,146 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Poppins:ital,wght@0,100;0,400;0,700;0,900;1,100&display=swap');
 * {
     margin: 0;
     padding: 0;
+    
+    
 }
-
 body {
-    font-family:  'Roboto', sans-serif;
-}
-.body {
-    display: flex;
-    
-    justify-content: space-around;
-    align-items: flex-start;
-    gap: 100px;
-    background-image: url('./images/cheese.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 390px;
-    padding: 10px;
-}
-
-.main-body{
-   
-    color: rgb(28, 27, 27);
-    width: 350px;
-    
-    
-
-
-}
-ul, .description {
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
-   
-}
-
-ul {
-    display: flex;
-    
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    justify-content: flex-end;
-    gap: 30px;
-   
-
-}
-.lower-body {
-    
-    margin-right: 50px;
-    
-    
-}
-
-
-.Header {
-    font-size: 24px;
-    color:black;
-    font-weight: bolder;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
-}
-.button {
-    background: royalblue;
-  border: 1px solid royalblue;
-  color: white;
-  padding: 8px 16px;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-li button {
-    
-   border-radius: 8px;
-   border: 1px;
-   padding: 8px 16px;
-   background: rgba(246, 220, 136, 0.3);
-   font-weight: bolder;
-   font-size: 20px;
-}
-
-/* Middle part code */
-
-.img-1,.img-2,.img-3,.img-4 {
-    width: 200px;
-    height: 200px;
-    border-radius: 25px;
-    margin-top: 20px;
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 20px;
-  border: rgb(118, 118, 2) solid;
-  background-size: cover;
-  }
-
-  .mp-header {
-    
-    text-align: center;
-    font-size: 36px;
-    font-weight: bolder;
-    margin-top: 30px;
-  }
-
-  .img-box {
-    display: flex;
-    
-    justify-content: center;
-    gap: 20px;
-  }
-
-  .img-detail {
-    display: flex;
-    justify-content: center;
-    
-    flex-wrap: wrap;
-    
-  }
-  .middle-part {
-    height: 400px;
-    margin-top: 0;
-    padding: 0;
-    background-color: wheat;
-    border: wheat solid;
-  }
-  .img-1 {
-    background-image: url('./images/cheese3.jpeg');
-  }
-  .img-2 {background-image: url('./images/gouda.jpg');
-
-  }
-  .img-3 {background-image: url('./images/feta.jpg');}
-  .img-4 {background-image: url('./images/mozzarella.jpg');}
-
-
-  /* Quote part */
-.lower-part {
-    background-image: url('./images/cheese.jpg');
-    background-position: bottom;
-    display: flex;
-    height: 350px;
-    align-items: center;
-    justify-content: space-around;
-}
-.quote {
-    font-size: 36px;
-    font-style: italic;
-    font-weight: bolder;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 800px;
-    height: 200px;
-}
-
-.author {
-    display: flex;
-    
-    justify-content: flex-end;
-    font-size: 28px;
-    font-weight: bolder;
-}
-
-.end {
-    height: 350px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: wheat;
-}
-.whole {
-    height: 100px;
-    width: 900px;
-    background: royalblue;
-    border: 1px solid royalblue;
-    padding: 8px 16px;
-  border-radius: 8px;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  flex-direction: column;
+  
+  background-image: url(./images/cheeseback.jpg);
+    background-repeat: repeat;
 
 }
-.buttons {
-    border: 3px solid white;
-    padding: 8px 16px;
-  border-radius: 8px;
-  background-color: royalblue;
-  color: white;
-  font-size: medium;
-  width: 150px;
+.top {
+  font-family: 'Brush Script MT', cursive;
+  font-weight: bold; 
+  /* border: solid black; */
+  font-size: larger;
+  text-align: center;
 }
-.Call {
-font-size: 28px;
-color: white;
+
+.container {
+  width: 1300px;
+    
+    background: linear-gradient(110deg, #ffa600 60%, rgba(0, 0, 0, 0) 60%), url('./images/cheese.jpg');
+    height: 85vh;
+    margin: 50px auto;
+    
+    border-radius: 10px;
+    
+
 }
-.point {
-    font-size: 18px;
-    color: white;
+
+.upper-menu{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.links {
+  display: flex;
+  gap: 20px;
+}
+li {
+  list-style-type: none;
+}
+
+
+
+.mid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.mp-header {
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+
+
+.img-box {
+  display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    flex-wrap: wrap;
+    background-color: ffa600;
+    gap: 50px;
+    margin-top: 10px;
+   
+}
+
+.img-box img {
+  border-radius: 12px;
+    box-shadow: 2px 5px 20px black;
+    margin-bottom: 12px;
+    height: 225px;
+    width: 225px;
+    margin-top: 20px;
+}
+.info {
+  width: 200px;
+    padding-bottom: 48px;
+    font-size: larger;
+    font-weight: bolder;
+}
+.info img:hover {
+  transform: scale(1.05);
+}
+
+.img-detail {
+  text-align: center;
+  font-size: larger;
+}
+
+
+
+
+/* CSS button */
+.links button {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: #fa6400;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  color: black;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  padding: 15px;
+  transition: all 250ms; 
+  width: auto;
+}
+
+.links button:hover,
+.links button:focus {
+  background-color: #fb8332;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.links button:hover {
+  transform: translateY(-1px);
+}
+.links button:active {
+  background-color: #c85000;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+.quote {
+  display: flex;
+  width: 550px;
+  font-size: xx-large;
+  font-weight: bolder;
+  /* padding: 20px; */
+  margin-left: 20px;
+}
+.author {
+  
+  display: flex;
+  justify-content: center;
+  width: 500px;
 }
